--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,6 +33,10 @@
         <span class="fa fa-user"></span> 
         Local Signup
       </a>
+      <a href="/auth/facebook" class="btn btn-primary">
+        <span class="fa fa-facebook"></span> 
+        Facebook
+      </a>
     </div>
 
   </div>
