--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,6 +37,10 @@
         <span class="fa fa-facebook"></span> 
         Facebook
       </a>
+       <a href="/auth/twitter" class="btn btn-info">
+         <span class="fa fa-twitter"></span>
+         Twitter
+      </a>
     </div>
 
   </div>
