--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,9 +37,14 @@
         <span class="fa fa-facebook"></span> 
         Facebook
       </a>
-       <a href="/auth/twitter" class="btn btn-info">
+      <a href="/auth/twitter" class="btn btn-info">
          <span class="fa fa-twitter"></span>
          Twitter
+      </a>
+
+      <a href="/auth/google" class="btn btn-danger">
+         <span class="fa fa-google-plus"></span> 
+         Google
       </a>
     </div>
 
