--- a/views/connect-local.ejs
+++ b/views/connect-local.ejs
@@ -29,7 +29,7 @@
           <form action="/connect/local" method="post">
             <div class="form-group">
               <label>Email</label>
-              <input type="text" class="form-control" name="email">
+              <input type="email" class="form-control" name="email" required>
             </div>
             <div class="form-group">
               <label>Password</label>
