--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -33,7 +33,7 @@
           <form action="/signup" method="post">
             <div class="form-group">
               <label>Email</label>
-              <input type="email" class="form-control" name="email">
+              <input type="email" class="form-control" name="email" required>
             </div>
             <div class="form-group">
               <label>Password</label>
