--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -54,6 +54,7 @@
           <!-- check if the user has this token (is the user authenticated with this social account) -->
           <% if (user.facebook.token) { %>
             <img src="<%= user.facebook.picture %>" class="img-circle center-block" />
+          <hr>
             <p>
               <strong>id</strong>:
               <%= user.facebook.id %><br>
@@ -80,6 +81,9 @@
           <h3 class="text-info"><span class="fa fa-twitter"></span> Twitter</h3>
 
           <% if (user.twitter.token) { %>
+            <img src="<%= user.twitter.picture %>" class="img-circle center-block" />
+          <hr>
+
             <p>
               <strong>id</strong>:
               <%= user.twitter.id %><br>
@@ -104,6 +108,8 @@
           <h3 class="text-danger"><span class="fa fa-google-plus"></span> Google+</h3>
 
           <% if (user.google.token) { %>
+          <img src="<%= user.google.picture %>" class="img-circle center-block" />
+          <hr>
             <p>
               <strong>id</strong>:
               <%= user.google.id %><br>
