--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,10 +4,8 @@
 
 <head>
   <title>Node Authentication</title>
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-  <!-- load bootstrap css -->
-  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-  <!-- load fontawesome -->
+  <link rel="stylesheet" href="/bootstrap/css/amelia.bootstrap.min.css">
+  <link rel="stylesheet" href="/bootstrap/css/font-awesome.min.css">
   <style>
     body {
       padding-top: 80px;
